# twetalk-sdk-demo

./: README.md  settings.gradle.kts
app/: .gitignore  build.gradle.kts  config.json
app/src/androidTest/java/com/tencent/twetalk_sdk_demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tencent/twetalk_sdk_demo/: AiConfigActivity.kt  BaseActivity.kt  DeviceBindActivity.kt  HistoryActivity.kt  MainActivity.kt  SettingsActivity.kt  TalkApplication.kt
app/src/main/res/color/: selector_icon_tint_error.xml  selector_icon_tint_gray.xml  selector_icon_tint_white.xml
app/src/main/res/drawable/: bg_ai_video_msg.xml  bg_audio_visualizer.xml  bg_avatar_call.xml  bg_system_message.xml  bg_user_video_msg.xml  error_background.xml  ic_ai.xml  ic_ai_config.xml  ic_audio.xml  ic_connect.xml  ic_delete_small.xml  ic_device.xml  ic_disconnected.xml  ic_empty_history.xml  ic_end_call.xml  ic_expand_less.xml  ic_expand_more.xml  ic_history.xml  ic_launcher_foreground.xml  ic_mic_off.xml  ic_mic_recording.xml  ic_pause.xml  ic_product.xml  ic_search.xml  ic_sort.xml  ic_sort_asc.xml  ic_sort_desc.xml  ic_stop.xml  ic_swap.xml  ic_trtc.xml  loading_bg.xml  spinner_background.xml
app/src/main/res/layout/: activity_ai_config.xml  activity_call_config.xml  activity_chat.xml  activity_device_bind.xml  activity_history.xml  activity_main.xml  activity_settings.xml  activity_video_chat.xml  activity_wx_call.xml  dialog_contact_edit.xml  item_chat_message.xml  item_chat_session.xml  item_contact.xml  item_idle_response.xml  layout_loading.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/tencent/twetalk_sdk_demo/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
trtc-demo/: build.gradle.kts
trtc-demo/src/main/: AndroidManifest.xml
trtc-demo/src/main/res/layout/: activity_main.xml
trtc-demo/src/main/res/values/: strings.xml  themes.xml
trtc-demo/src/main/res/values-night/: themes.xml
twetalk-audio/: build.gradle.kts
twetalk-audio/src/main/cpp/: CMakeLists.txt  opus_jni.cpp
websocket-demo/: build.gradle.kts
websocket-demo/src/main/: AndroidManifest.xml
websocket-demo/src/main/res/layout/: activity_main.xml
websocket-demo/src/main/res/values/: strings.xml  themes.xml
websocket-demo/src/main/res/values-night/: themes.xml
websocket-demo/src/main/res/xml/: network_security_config.xml
(+52 files in other folders)
